--- a/dev/public/search-empty.html
+++ b/dev/public/search-empty.html
@@ -610,7 +610,7 @@
                         </svg></span></div>
                   </div>
                 </div>
-                <div class="catalog-items row catalog-items--slider" data-params="{&quot;slidesToShow&quot;: 6, &quot;slidesToScroll&quot;: 5}">
+                <div class="catalog-items row catalog-items--slider" data-params="{&quot;slidesToShow&quot;: 6, &quot;slidesToScroll&quot;: 5, &quot;infinite&quot;: true}">
                   <div class="col-md-2">
                     <div class="catalog-item w1">
                       <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/catalog/c21.jpg"></div>
@@ -899,7 +899,7 @@
     <div class="page-popup page-popup-w565 mfp-hide" id="size-popup">
       <div class="page-popup-heading">
         <div class="page-popup-heading-title center h1">Уточните необходимые размеры</div>
-        <div class="check-dimensions-list">
+        <div class="check-dimensions-list check-list">
           <div class="col">Жакет</div>
           <div class="col">
                 <ul class="size-list">
@@ -911,7 +911,7 @@
                 </ul>
           </div>
         </div>
-        <div class="check-dimensions-list">
+        <div class="check-dimensions-list check-list">
           <div class="col">Брюки</div>
           <div class="col">
                 <ul class="size-list">
@@ -923,7 +923,7 @@
                 </ul>
           </div>
         </div>
-        <div class="check-dimensions-list">
+        <div class="check-dimensions-list check-list">
           <div class="col">Топ</div>
           <div class="col">
                 <ul class="size-list">
