--- a/dev/public/shops.html
+++ b/dev/public/shops.html
@@ -303,8 +303,10 @@
                           </div>
                           <div class="order-table__price">6 500 РУБ.</div>
                           <div class="order-table__color">
-                            <div class="order-table__color"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a>
+                            <div class="order-table__color" style="width: calc( * 19px);"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a>
                               <div class="order-table__color-link order-table__color-link_last d-none"></div>
+                            </div>
+                            <div class="order-table__color" style="width: 75px;"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a>
                             </div>
                           </div>
                           <div class="product-size-select">
@@ -334,8 +336,10 @@
                           </div>
                           <div class="order-table__price">15 900 РУБ.</div>
                           <div class="order-table__color">
-                            <div class="order-table__color"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a>
+                            <div class="order-table__color" style="width: calc( * 19px);"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a>
                               <div class="order-table__color-link order-table__color-link_last d-none"></div>
+                            </div>
+                            <div class="order-table__color" style="width: 75px;"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a>
                             </div>
                           </div>
                           <div class="product-size-select">
@@ -911,7 +915,7 @@
     <div class="page-popup page-popup-w565 mfp-hide" id="size-popup">
       <div class="page-popup-heading">
         <div class="page-popup-heading-title center h1">Уточните необходимые размеры</div>
-        <div class="check-dimensions-list">
+        <div class="check-dimensions-list check-list">
           <div class="col">Жакет</div>
           <div class="col">
                 <ul class="size-list">
@@ -923,7 +927,7 @@
                 </ul>
           </div>
         </div>
-        <div class="check-dimensions-list">
+        <div class="check-dimensions-list check-list">
           <div class="col">Брюки</div>
           <div class="col">
                 <ul class="size-list">
@@ -935,7 +939,7 @@
                 </ul>
           </div>
         </div>
-        <div class="check-dimensions-list">
+        <div class="check-dimensions-list check-list">
           <div class="col">Топ</div>
           <div class="col">
                 <ul class="size-list">
