--- a/dev/public/favorites.html
+++ b/dev/public/favorites.html
@@ -583,7 +583,7 @@
                         <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                         <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                       </svg></span></div>
-                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1}"><img src="../dummy/favorites/c1.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
+                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c1.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
                   <div class="slider-size"> 
                     <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
@@ -620,7 +620,7 @@
                         <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                         <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                       </svg></span></div>
-                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1}"><img src="../dummy/favorites/c2.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
+                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c2.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
                   <div class="slider-size"> 
                     <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
@@ -657,7 +657,7 @@
                         <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                         <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                       </svg></span></div>
-                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1}"><img src="../dummy/favorites/c3.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
+                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c3.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
                   <div class="slider-size"> 
                     <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
@@ -694,7 +694,7 @@
                         <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                         <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                       </svg></span></div>
-                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1}"><img src="../dummy/favorites/c4.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
+                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c4.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
                   <div class="slider-size"> 
                     <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
@@ -731,7 +731,7 @@
                         <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                         <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                       </svg></span></div>
-                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1}"><img src="../dummy/favorites/c5.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
+                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c5.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
                   <div class="slider-size"> 
                     <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
@@ -768,7 +768,7 @@
                         <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                         <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                       </svg></span></div>
-                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1}"><img src="../dummy/favorites/c6.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
+                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c6.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
                   <div class="slider-size"> 
                     <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
@@ -805,7 +805,7 @@
                         <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                         <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                       </svg></span></div>
-                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1}"><img src="../dummy/favorites/c7.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
+                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c7.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
                   <div class="slider-size"> 
                     <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
@@ -842,7 +842,7 @@
                         <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                         <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                       </svg></span></div>
-                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1}"><img src="../dummy/favorites/c8.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
+                  <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c8.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c25.jpg"></div>
                   <div class="slider-size"> 
                     <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
@@ -890,7 +890,7 @@
                           </svg></span></div>
                     </div>
                   </div>
-                  <div class="catalog-items row catalog-items--slider" data-params="{&quot;slidesToShow&quot;: 6, &quot;slidesToScroll&quot;: 5}">
+                  <div class="catalog-items row catalog-items--slider" data-params="{&quot;slidesToShow&quot;: 6, &quot;slidesToScroll&quot;: 5, &quot;infinite&quot;: true}">
                     <div class="col-md-2">
                       <div class="catalog-item w1">
                         <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/catalog/c21.jpg"></div>
@@ -1180,7 +1180,7 @@
     <div class="page-popup page-popup-w565 mfp-hide" id="size-popup">
       <div class="page-popup-heading">
         <div class="page-popup-heading-title center h1">Уточните необходимые размеры</div>
-        <div class="check-dimensions-list">
+        <div class="check-dimensions-list check-list">
           <div class="col">Жакет</div>
           <div class="col">
                 <ul class="size-list">
@@ -1192,7 +1192,7 @@
                 </ul>
           </div>
         </div>
-        <div class="check-dimensions-list">
+        <div class="check-dimensions-list check-list">
           <div class="col">Брюки</div>
           <div class="col">
                 <ul class="size-list">
@@ -1204,7 +1204,7 @@
                 </ul>
           </div>
         </div>
-        <div class="check-dimensions-list">
+        <div class="check-dimensions-list check-list">
           <div class="col">Топ</div>
           <div class="col">
                 <ul class="size-list">
