edits for slider-you-also-like and slider-prev-watched

--- a/dev/public/basket.html
+++ b/dev/public/basket.html
@@ -303,7 +303,7 @@
                           </div>
                           <div class="order-table__price">6 500 РУБ.</div>
                           <div class="order-table__color">
-                            <div class="order-table__color"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a>
+                            <div class="order-table__color" style="width: calc( * 19px);"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                               <div class="order-table__color-link order-table__color-link_last d-none"></div>
                             </div>
                           </div>
@@ -334,7 +334,7 @@
                           </div>
                           <div class="order-table__price">15 900 РУБ.</div>
                           <div class="order-table__color">
-                            <div class="order-table__color"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a>
+                            <div class="order-table__color" style="width: calc( * 19px);"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                               <div class="order-table__color-link order-table__color-link_last d-none"></div>
                             </div>
                           </div>
@@ -1392,7 +1392,7 @@
                 <div class="mobile-filter-item-content"><a class="mobile-filter__link size-guide-link" href="#message-you-subscribed" data-popup="{&quot;type&quot;:&quot;inline&quot;}">Руководство по размерам</a>
                   <div class="filter-row filter-row__size">
                     <label class="form-checkbox">
-                      <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">1One size</span>
+                      <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">One size</span>
                     </label>
                     <label class="form-checkbox">
                       <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">Рост H1</span>
