--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -846,7 +846,7 @@
           <section class="section">
             <div class="page-inner plr0">
               <div class="catalog">
-                <div class="catalog">
+                <div class="catalog slider-you-also-like">
                   <div class="row justify-content-between align-items-center">
                     <div class="col-auto">
                       <div class="title-block">Вам также может понравиться</div>
@@ -1026,7 +1026,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="catalog-items row catalog-items--slider mlr--20px d-block d-lg-none">
+                  <div class="catalog-items row catalog-items--slider mlr-sm--20px d-block d-lg-none">
                     <div class="col-md-2">
                       <div class="catalog-item w2">
                         <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/catalog/c21.jpg"></div>
@@ -1080,10 +1080,10 @@
               </div>
             </div>
           </section>
-          <div class="catalog">
+          <div class="catalog slider-prev-watched">
             <div class="row justify-content-between align-items-center">
               <div class="col-auto">
-                <div class="title-block" style="margin-left: 15px;">Ранее вы смотрели</div>
+                <div class="title-block">Ранее вы смотрели</div>
               </div>
               <div class="slider-arrows-wrap col-auto d-none d-lg-block">
                 <div class="slider-arrows"><span class="slider-arrow prev">
@@ -1099,7 +1099,7 @@
                     </svg></span></div>
               </div>
             </div>
-            <div class="catalog-items row catalog-items--slider m-0">
+            <div class="catalog-items row catalog-items--slider mlr-sm--20px m-0"> 
               <div class="col-md-2">
                 <div class="catalog-item w1">
                   <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/prev-watched/c21.jpg"></div>
