--- a/dev/public/brand.html
+++ b/dev/public/brand.html
@@ -1061,10 +1061,10 @@
         <div class="page-inner--w1 page-inner hidden-x">
           <div class="page-inner page-inner--w2">
             <div class="catalog">
-              <div class="catalog">
+              <div class="catalog slider-prev-watched">
                 <div class="row justify-content-between align-items-center">
                   <div class="col-auto">
-                    <div class="title-block" style="margin-left: 15px;">Ранее вы смотрели</div>
+                    <div class="title-block">Ранее вы смотрели</div>
                   </div>
                   <div class="slider-arrows-wrap col-auto d-none d-lg-block">
                     <div class="slider-arrows"><span class="slider-arrow prev">
@@ -1080,7 +1080,7 @@
                         </svg></span></div>
                   </div>
                 </div>
-                <div class="catalog-items row catalog-items--slider m-0">
+                <div class="catalog-items row catalog-items--slider mlr-sm--20px m-0"> 
                   <div class="col-md-2">
                     <div class="catalog-item w1">
                       <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/prev-watched/c21.jpg"></div>
