fix Olegs rewievs for card.html

--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -289,69 +289,6 @@
                     <div class="col-md-2"><a class="order-table-delete" href="#"> </a></div>
                   </div>
                 </div>
-                <div class="order-table__title">С этим товаром смотрят</div>
-                <div class="order-table__block order-table__mr">
-                  <div class="order-table basket">
-                    <div class="order-table__row">
-                      <div class="order-table__item catalog-item1">
-                        <div class="order-table__img">
-                          <div class="order-photo-holder"><img class="cover" src="../dummy/catalog/c2.jpg"></div>
-                        </div>
-                        <div class="order-table__info">
-                          <div class="order-table__row">
-                            <div class="order-table__name">БРЮКИ</div><a class="order-table-heart" href="#"> </a>
-                          </div>
-                          <div class="order-table__price">6 500 РУБ.</div>
-                          <div class="order-table__color">
-                            <div class="order-table__color" style="width: calc( * 19px);"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
-                              <div class="order-table__color-link order-table__color-link_last d-none"></div>
-                            </div>
-                          </div>
-                          <div class="product-size-select">
-                            <select class="form-item form-item--select w100">
-                              <option value="Выберите размер" item.selected>Выберите размер</option>
-                              <option value="S" item.selected>S</option>
-                              <option value="M" item.selected>M</option>
-                              <option value="L" item.selected>L</option>
-                              <option value="XL" item.selected>XL</option>
-                            </select>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="order-table__block order-table__mr">
-                  <div class="order-table basket">
-                    <div class="order-table__row">
-                      <div class="order-table__item catalog-item1">
-                        <div class="order-table__img">
-                          <div class="order-photo-holder"><img class="cover" src="../dummy/catalog/c9.jpg"></div>
-                        </div>
-                        <div class="order-table__info">
-                          <div class="order-table__row">
-                            <div class="order-table__name">БРЮКИ</div><a class="order-table-heart" href="#"> </a>
-                          </div>
-                          <div class="order-table__price">15 900 РУБ.</div>
-                          <div class="order-table__color">
-                            <div class="order-table__color" style="width: calc( * 19px);"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
-                              <div class="order-table__color-link order-table__color-link_last d-none"></div>
-                            </div>
-                          </div>
-                          <div class="product-size-select">
-                            <select class="form-item form-item--select w100">
-                              <option value="Выберите размер" item.selected>Выберите размер</option>
-                              <option value="S" item.selected>S</option>
-                              <option value="M" item.selected>M</option>
-                              <option value="L" item.selected>L</option>
-                              <option value="XL" item.selected>XL</option>
-                            </select>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
             <div class="basket-mobile-menu__footer">
@@ -404,12 +341,12 @@
                       </label>
                       <label data-tab="#size-tabs_six" data-tabs=".size-tab">
                         <div class="size-item-content">
-                          <div class="size-item-title">Рост H1</div>
+                          <div class="size-item-title">Рост&nbsp;H1</div>
                         </div>
                       </label>
                       <label data-tab="#size-tabs_seven" data-tabs=".size-tab">
                         <div class="size-item-content">
-                          <div class="size-item-title">Рост H2</div>
+                          <div class="size-item-title">Рост&nbsp;H2</div>
                         </div>
                       </label>
                     </div>
@@ -693,8 +630,8 @@
                     <option value="XL">XL </option>
                   </select>
                 </div>
-              </div>
-            </div><a class="btn btn--black btn--medium basket-open" href="#">ДОБАВИТЬ В КОРЗИНУ</a>
+              </div><a class="btn btn--black btn--medium basket-open" href="#">ДОБАВИТЬ В КОРЗИНУ</a>
+            </div>
           </div>
         </div>
         <div class="page-inner page-inner--w2"> 
@@ -1161,7 +1098,7 @@
         </div>
       </main>
       <footer class="page-footer" itemscope="" itemtype="http://schema.org/WPFooter">
-        <div class="page-inner page-inner--w1">
+        <div class="page-inner page-inner--w2">
           <div class="footer-top">
             <ul class="footer-top__list">
               <li class="footer-top__item"><a href="#">VKONTAKTE</a></li>
