--- a/dev/public/brand.html
+++ b/dev/public/brand.html
@@ -305,7 +305,7 @@
             <div class="size-open size-menu__close1 size-menu__close"></div>
             <div class="basket-menu-sections" style="overflow: auto;"> 
               <div class="size-menu__title">Таблица размеров</div>
-              <div class="basket-mobile-menu__body test1 simplebar">
+              <div class="basket-mobile-menu__body test simplebar">
                 <div>
                   <div class="size-menu__text">
                     Этот справочник по размерам носит ориентировочный характер.
@@ -1017,7 +1017,7 @@
                         </svg></span></div>
                   </div>
                 </div>
-                <div class="catalog-items row catalog-items--slider mlr-sm--20px m-0"> 
+                <div class="catalog-items row catalog-items--slider-watched mlr-sm--20px m-0"> 
                   <div class="col-md-2">
                     <div class="catalog-item w1">
                       <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/prev-watched/c21.jpg"></div>
