fix Olegs rewievs for search-open

--- a/dev/public/brand.html
+++ b/dev/public/brand.html
@@ -53,7 +53,7 @@
                 <li class="header-menu__item header-menu__item_search catalog-search-open only-mobile_header-menu"><a href="#"><span>Поиск</span></a></li>
               </ul>
             </div>
-            <div class="header-menu__center"><a class="header-logo" href="http://brusnika.ruformat.ru/"><img src="../svg/header_logo.svg" alt=""></a></div>
+            <div class="header-menu__center"><a class="header-logo" href="http://brusnika.ruformat.ru/"><img src="../svg/header_logo.png" alt=""></a></div>
             <div class="header-menu__right">
               <ul class="header-menu__list">
                 <li class="header-menu__item header-menu__item_search catalog-search-open only-desktop_header-menu"><a href="#"><span>Поиск</span></a></li>
@@ -305,7 +305,7 @@
             <div class="size-open size-menu__close1 size-menu__close"></div>
             <div class="basket-menu-sections" style="overflow: auto;"> 
               <div class="size-menu__title">Таблица размеров</div>
-              <div class="basket-mobile-menu__body test simplebar">
+              <div class="basket-mobile-menu__body simplebar">
                 <div>
                   <div class="size-menu__text">
                     Этот справочник по размерам носит ориентировочный характер.
@@ -563,7 +563,7 @@
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
                   </div><a class="catalog-item-link" href="card.html"></a>
-                  <button class="catalog-item-like" type="button">  </button>
+                  <div class="product-like" type="button">  </div>
                 </div>
               </div>
               <div class="col-6 col-lg-3">
@@ -601,7 +601,7 @@
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
                   </div><a class="catalog-item-link" href="card.html"></a>
-                  <button class="catalog-item-like" type="button">  </button>
+                  <div class="product-like" type="button">  </div>
                 </div>
               </div>
               <div class="col-6 col-lg-3">
@@ -639,7 +639,7 @@
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
                   </div><a class="catalog-item-link" href="card.html"></a>
-                  <button class="catalog-item-like" type="button">  </button>
+                  <div class="product-like" type="button">  </div>
                 </div>
               </div>
               <div class="col-6 col-lg-3">
@@ -677,7 +677,7 @@
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
                   </div><a class="catalog-item-link" href="card.html"></a>
-                  <button class="catalog-item-like" type="button">  </button>
+                  <div class="product-like" type="button">  </div>
                 </div>
               </div>
               <div class="col-12">
@@ -1595,7 +1595,7 @@
                 </div>
                 <div class="mobile-filter-item-content"></div>
               </div>
-              <div class="mobile-filter-item">
+              <div class="mobile-filter-item mobile-filter-item--size">
                 <div class="mobile-filter-item-heading">
                   <div class="mobile-filter-item-heading-title">Размер</div>
                   <div class="mobile-filter-item-heading-toggler"></div>
