--- a/dev/public/brand-large.html
+++ b/dev/public/brand-large.html
@@ -53,7 +53,7 @@
                 <li class="header-menu__item header-menu__item_search catalog-search-open only-mobile_header-menu"><a href="#"><span>Поиск</span></a></li>
               </ul>
             </div>
-            <div class="header-menu__center"><a class="header-logo" href="http://brusnika.ruformat.ru/"><img src="../svg/header_logo.svg" alt=""></a></div>
+            <div class="header-menu__center"><a class="header-logo" href="http://brusnika.ruformat.ru/"><img src="../svg/header_logo.png" alt=""></a></div>
             <div class="header-menu__right">
               <ul class="header-menu__list">
                 <li class="header-menu__item header-menu__item_search catalog-search-open only-desktop_header-menu"><a href="#"><span>Поиск</span></a></li>
@@ -305,7 +305,7 @@
             <div class="size-open size-menu__close1 size-menu__close"></div>
             <div class="basket-menu-sections" style="overflow: auto;"> 
               <div class="size-menu__title">Таблица размеров</div>
-              <div class="basket-mobile-menu__body test simplebar">
+              <div class="basket-mobile-menu__body simplebar">
                 <div>
                   <div class="size-menu__text">
                     Этот справочник по размерам носит ориентировочный характер.
@@ -519,8 +519,8 @@
             </div>
             <div>
               <ul class="filters-list-small">
-                <li><a href="brand-large.html">Крупно</a></li>
-                <li><span class="active">Мелко</span></li>
+                <li><span class="active">Крупно</span></li>
+                <li><a href="brand.html">Мелко</a></li>
               </ul>
             </div>
           </div>
@@ -2145,7 +2145,7 @@
                 </div>
                 <div class="mobile-filter-item-content"></div>
               </div>
-              <div class="mobile-filter-item">
+              <div class="mobile-filter-item mobile-filter-item--size">
                 <div class="mobile-filter-item-heading">
                   <div class="mobile-filter-item-heading-title">Размер</div>
                   <div class="mobile-filter-item-heading-toggler"></div>
