--- a/dev/public/shops.html
+++ b/dev/public/shops.html
@@ -53,7 +53,7 @@
                 <li class="header-menu__item header-menu__item_search catalog-search-open only-mobile_header-menu"><a href="#"><span>Поиск</span></a></li>
               </ul>
             </div>
-            <div class="header-menu__center"><a class="header-logo" href="http://brusnika.ruformat.ru/"><img src="../svg/header_logo.svg" alt=""></a></div>
+            <div class="header-menu__center"><a class="header-logo" href="http://brusnika.ruformat.ru/"><img src="../svg/header_logo.png" alt=""></a></div>
             <div class="header-menu__right">
               <ul class="header-menu__list">
                 <li class="header-menu__item header-menu__item_search catalog-search-open only-desktop_header-menu"><a href="#"><span>Поиск</span></a></li>
@@ -289,73 +289,6 @@
                     <div class="col-md-2"><a class="order-table-delete" href="#"> </a></div>
                   </div>
                 </div>
-                <div class="order-table__title">С этим товаром смотрят</div>
-                <div class="order-table__block order-table__mr">
-                  <div class="order-table basket">
-                    <div class="order-table__row">
-                      <div class="order-table__item catalog-item1">
-                        <div class="order-table__img">
-                          <div class="order-photo-holder"><img class="cover" src="../dummy/catalog/c2.jpg"></div>
-                        </div>
-                        <div class="order-table__info">
-                          <div class="order-table__row">
-                            <div class="order-table__name">БРЮКИ</div><a class="order-table-heart" href="#"> </a>
-                          </div>
-                          <div class="order-table__price">6 500 РУБ.</div>
-                          <div class="order-table__color">
-                            <div class="order-table__color" style="width: calc( * 19px);"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a>
-                              <div class="order-table__color-link order-table__color-link_last d-none"></div>
-                            </div>
-                            <div class="order-table__color" style="width: 75px;"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a>
-                            </div>
-                          </div>
-                          <div class="product-size-select">
-                            <select class="form-item form-item--select w100">
-                              <option value="Выберите размер" item.selected>Выберите размер</option>
-                              <option value="S" item.selected>S</option>
-                              <option value="M" item.selected>M</option>
-                              <option value="L" item.selected>L</option>
-                              <option value="XL" item.selected>XL</option>
-                            </select>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="order-table__block order-table__mr">
-                  <div class="order-table basket">
-                    <div class="order-table__row">
-                      <div class="order-table__item catalog-item1">
-                        <div class="order-table__img">
-                          <div class="order-photo-holder"><img class="cover" src="../dummy/catalog/c9.jpg"></div>
-                        </div>
-                        <div class="order-table__info">
-                          <div class="order-table__row">
-                            <div class="order-table__name">БРЮКИ</div><a class="order-table-heart" href="#"> </a>
-                          </div>
-                          <div class="order-table__price">15 900 РУБ.</div>
-                          <div class="order-table__color">
-                            <div class="order-table__color" style="width: calc( * 19px);"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a>
-                              <div class="order-table__color-link order-table__color-link_last d-none"></div>
-                            </div>
-                            <div class="order-table__color" style="width: 75px;"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a><a class="order-table__color-link" href="#"> <span class="color-braun"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a><a class="order-table__color-link" href="#"> <span class="color-violet"></span></a>
-                            </div>
-                          </div>
-                          <div class="product-size-select">
-                            <select class="form-item form-item--select w100">
-                              <option value="Выберите размер" item.selected>Выберите размер</option>
-                              <option value="S" item.selected>S</option>
-                              <option value="M" item.selected>M</option>
-                              <option value="L" item.selected>L</option>
-                              <option value="XL" item.selected>XL</option>
-                            </select>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
             <div class="basket-mobile-menu__footer">
@@ -372,7 +305,7 @@
             <div class="size-open size-menu__close1 size-menu__close"></div>
             <div class="basket-menu-sections" style="overflow: auto;"> 
               <div class="size-menu__title">Таблица размеров</div>
-              <div class="basket-mobile-menu__body test1 simplebar">
+              <div class="basket-mobile-menu__body simplebar">
                 <div>
                   <div class="size-menu__text">
                     Этот справочник по размерам носит ориентировочный характер.
@@ -408,12 +341,12 @@
                       </label>
                       <label data-tab="#size-tabs_six" data-tabs=".size-tab">
                         <div class="size-item-content">
-                          <div class="size-item-title">Рост H1</div>
+                          <div class="size-item-title">Рост&nbsp;H1</div>
                         </div>
                       </label>
                       <label data-tab="#size-tabs_seven" data-tabs=".size-tab">
                         <div class="size-item-content">
-                          <div class="size-item-title">Рост H2</div>
+                          <div class="size-item-title">Рост&nbsp;H2</div>
                         </div>
                       </label>
                     </div>
@@ -597,7 +530,7 @@
                   </ul>
                 </div>
                 <ul class="filters-list-small">
-                  <li><a href="shops.html">Список</a></li>
+                  <li><span class="active">Список</span></li>
                   <li><a href="shop-map.html">На карте</a></li>
                 </ul>
               </div>
@@ -698,7 +631,7 @@
         </div>
       </main>
       <footer class="page-footer" itemscope="" itemtype="http://schema.org/WPFooter">
-        <div class="page-inner page-inner--w1">
+        <div class="page-inner page-inner--w2">
           <div class="footer-top">
             <ul class="footer-top__list">
               <li class="footer-top__item"><a href="#">VKONTAKTE</a></li>
@@ -1212,7 +1145,7 @@
                 </div>
                 <div class="mobile-filter-item-content"></div>
               </div>
-              <div class="mobile-filter-item">
+              <div class="mobile-filter-item mobile-filter-item--size">
                 <div class="mobile-filter-item-heading">
                   <div class="mobile-filter-item-heading-title">Размер</div>
                   <div class="mobile-filter-item-heading-toggler"></div>
@@ -1220,7 +1153,7 @@
                 <div class="mobile-filter-item-content"><a class="mobile-filter__link size-guide-link" href="#message-you-subscribed" data-popup="{&quot;type&quot;:&quot;inline&quot;}">Руководство по размерам</a>
                   <div class="filter-row filter-row__size">
                     <label class="form-checkbox">
-                      <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">1One size</span>
+                      <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">One size</span>
                     </label>
                     <label class="form-checkbox">
                       <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">Рост H1</span>
