fix текст подробнее текст подробнее текст подробнее

--- a/dev/public/brand-large.html
+++ b/dev/public/brand-large.html
@@ -567,7 +567,7 @@
                 <div class="catalog-item-text">
                   <div class="catalog-item-text__title">ПЛАТЬЯ И КОМБИНЕЗОНЫ НОВОГО СЕЗОНА ДЛЯ ЖЕНЩИН</div>
                   <div class="catalog-item-text__lid">Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков</div><a class="link-more link-more-js" href="#">Подробнее</a>
-                  <div class="d-none">текст подробнее текст подробнее текст подробнее</div>
+                  <div class="v-hidden">текст подробнее текст подробнее текст подробнее</div>
                 </div>
               </div>
             </div>
