edits favorites page

--- a/dev/public/brand-large.html
+++ b/dev/public/brand-large.html
@@ -1567,7 +1567,7 @@
                           </svg></span></div>
                     </div>
                   </div>
-                  <div class="catalog-items row catalog-items--slider-watched mlr-sm--20px m-0"> 
+                  <div class="catalog-items row catalog-items--slider-watched mlr-sm--20px m-0" style="position: relative; left: -12px;"> 
                     <div class="col-md-2">
                       <div class="catalog-item w1">
                         <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/prev-watched/c24.jpg"></div>
